# glitch-grow-ai-ads-agent

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
migrations/: migrate_agent_actions_discord.sql
ops/nginx/: insights.glitchexecutor.com.conf
ops/scripts/: backfill_embeddings.py  backfill_posthog.py  bootstrap_posthog.py  cleanup_airbyte_amazon_stale_tables.sql  migrate_agent_actions.sql  migrate_agent_memory.sql  migrate_airbyte_amazon_financials_view.sql  migrate_airbyte_amazon_sku_view.sql  migrate_airbyte_amazon_traffic_view.sql  migrate_airbyte_amazon_view.sql  migrate_airbyte_amazon_view_v2.sql  migrate_airbyte_amazon_view_v3.sql  migrate_airbyte_amazon_view_v4.sql  migrate_airbyte_amazon_view_v5.sql  migrate_amazon_attribution_view.sql  migrate_amazon_daily.sql  migrate_amazon_oauth.sql  migrate_meta_ads_daily.sql  migrate_tiktok_oauth.sql  register_webhooks.py  run_action_executor.py  run_action_planner.py  set_bot_commands.py  sync_amazon.py  sync_meta_ads.py
ops/systemd/: glitch-action-executor.service  glitch-action-executor.timer  glitch-action-planner.service  glitch-action-planner.timer  glitch-ads-bot.service  glitch-amazon-sync.service  glitch-amazon-sync.timer  glitch-discord-consumer.service  glitch-meta-ads-sync.service  glitch-meta-ads-sync.timer
playbooks/: demo.md
scripts/: urban_watch.sh
src/ads_agent/: brand_registry.py  config.py  fx.py  playbook.py  server.py
src/ads_agent/actions/: __init__.py  approval_targets.py  discord_notifier.py  diversity.py  executor.py  guardrails.py  models.py  notifier.py  (+4 more)
tests/: test_audit_phase_ab.py  test_destinations.py  test_discord_dispatcher.py  test_guest_order_distinct_id.py  test_meta_audit.py  test_port_meta_to_tiktok.py  test_server_hardening.py  test_smoke.py  test_tiktok_management.py
(+79 files in other folders)
