[project]
name = "glitch-grow-ai-ads-agent"
version = "0.0.1"
description = "Systematic AI agent for Glitch Grow Shopify ads ops (insights, tracking reconciliation, HITL ad write-actions)"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  # Web / server
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",

  # Agent stack
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "pydantic-ai>=0.0.14",
  "litellm>=1.52",

  # LLM providers (LiteLLM dispatches to these)
  "anthropic>=0.40",
  "google-genai>=0.3",

  # Shopify data
  "asyncpg>=0.30",
  "gql[httpx]>=3.5",

  # Meta
  "facebook-business>=21.0",
  "python_sdk @ git+https://github.com/glitch-exec-labs/tiktok-business-api-sdk.git@main#subdirectory=python_sdk",

  # PostHog
  "posthog>=3.7",

  # GA4 (first-party attribution ground truth for our lighthouse client + future Shopify-native stores)
  "google-analytics-data>=0.18",
  "google-analytics-admin>=0.24",

  # Telegram
  "python-telegram-bot[rate-limiter,webhooks]>=21.6",

  # Utilities
  "structlog>=24.4",
  "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
  "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ads_agent"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "ASYNC"]
ignore = ["E501"]  # handled by line-length

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
